# robinhood-options-trading-system

./: .gitignore  BUILD_LOG.md  README.md  Robinhood_Agentic_Trading_-_Build_Spec_1.md  Robinhood_Options_Trading_System_V2_Architecture_and_Build_Spec.md  alembic.ini  compare_slice.py  docker-compose.yml  estimate_cost.py  orchestrator.py  pyproject.toml  requirements.txt  run_backtest.py  run_paper.py
agents/: __init__.py  auditor.py  calibration.py  edge_aggregator.py  execution.py  exit_monitor.py  portfolio_construction.py  risk_manager.py  scanner.py
agents/research/: __init__.py  base.py  fundamental.py  macro.py  sentiment.py  technical.py
backtest/: __init__.py  compare.py  cost.py  data.py  engine.py  fundamentals.py  report.py  variants.py
config/: __init__.py  guardrails.py  models.py  settings.py  strategy.py
core/: __init__.py  db.py  event_bus.py  llm.py  logging_setup.py  market_data.py  records.py  stats.py  util.py
dashboard/: __init__.py  api.py
dashboard/static/: index.html
docs/: BROKER_CAPABILITIES.md  BUILD_LOG.md  OPERATIONS_RUNBOOK.md  V1_TO_V2_TRACEABILITY.md
risk/: __init__.py  sizing.py
src/: __init__.py
src/agents/: __init__.py  catalyst_research.py  market_regime.py  options_specialist.py  performance_auditor.py  portfolio_manager.py  (+7 more)
tests/: conftest.py  test_auditor.py  test_backtest.py  test_backtest_variants.py  test_dashboard.py  test_data_layer.py  test_execution.py  test_exit_monitor.py  test_guardrails.py  test_model_layer.py  test_orchestrator.py  test_portfolio_risk.py  test_research.py  test_scanner.py
(+139 files in other folders)
